fix(ci): add release

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,9 +6,24 @@ jobs:
     build:
       runs-on: ubuntu-22.04
       steps:
-        - uses: actions/checkout@v4.1.1
+        - uses: actions/checkout@v4
         - name: Run docker
           run: |
             docker build . -t sshd:latest
             docker run -d -p 2222:22 -v /var/run/docker.sock:/var/run/docker.sock sshd:latest
             docker run -d -e PUBLIC_KEY="YOUR_PUB_KEY" -p 2223:22 -v /var/run/docker.sock:/var/run/docker.sock sshd:latest
+    
+    release:
+      needs:
+        - build
+      if: github.event_name == 'push'
+      runs-on: ubuntu-22.04
+      steps:
+        - name: Checkout
+          uses: actions/checkout@v4
+        - name: Release
+          run: |
+            npm install
+            npx semantic-release --branches main
+          env:
+            GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
